--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Steven Whitney, Web Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="carousel.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -25,28 +26,24 @@
     <div class="carousel-container">
         <div class="carousel-controls">
             <div id="carousel-left" class="carouselBtn">
-                <div>Left</div>
+                <div class="carouselUnselectable">Left</div>
             </div>
             <div id="carousel-right" class="carouselBtn">
-                <div>Right</div>
+                <div class="carouselUnselectable">Right</div>
             </div>
         </div>
         <div class="carouselBackground">
             <div id="carousel-img-container">
-                <div class="carouselImg img1"></div>
-                <div class="carouselImg img2" style="display: none;"></div>
-                <div class="carouselImg img3" style="display: none;"></div>
-                <!-- <div class="carouselImg img"></div>
-        <div class="carouselImg img"></div>
-        <div class="carouselImg img"></div>
-        <div class="carouselImg img"></div> -->
+                <div class="carouselImg" carouselImg="images/me.jpg"></div>
+                <div class="carouselImg" carouselImg="images/Knight Squat Version2.jpg"></div>
             </div>
         </div>
     </div>
     <!--Carousel end-->
 
-    <script src="index.js"></script>
     <script src="knightlyCarousel.js"></script>
+    <script src="index.js"></script>
+
 </body>
 
 </html>
